Integration Test with Bdd